setup paints html, css

--- a/style.css
+++ b/style.css
@@ -19,6 +19,34 @@ body {
 
 .controls {
     margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.controls .controls_btns {
+    margin-bottom: 30px;
+}
+
+.controls_btns button {
+    all: unset;
+    cursor: pointer;
+    background-color: white;
+    padding: 5px 0px;
+    width: 80px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    border: 2px solid rgba(0, 0,0, 0.2);
+    color: rgba(0, 0, 0, 0.7);
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+
+.controls_btns button:active {
+    transform: scale(0.98);
 }
 
 .controls .controls_colors {
@@ -32,3 +60,7 @@ body {
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
+
+.controls .controls_range {
+    margin-bottom: 30px;
+} 
